# cvm-plymouth-theme

./: .gitignore  PKGBUILD  README.md  cleanup.sh  cvm-plymouth-theme.spec  meson.build  meson_options.txt
bgrt-cvm/: bgrt-cvm.plymouth
cvm-ui-desktop/: cvm-spinner.plymouth
debian/: .gitignore  changelog  control  install  plymouth-theme-cvm-ui-desktop-bgrt.gsettings-override  plymouth-theme-cvm-ui-desktop-bgrt.install  plymouth-theme-cvm-ui-desktop-bgrt.postinst  plymouth-theme-cvm-ui-desktop-bgrt.postrm  plymouth-theme-cvm-ui-desktop-logo.install  plymouth-theme-cvm-ui-desktop-logo.postinst  plymouth-theme-cvm-ui-desktop-text.install  plymouth-theme-cvm-ui-desktop-text.postinst  plymouth-theme-cvm-ui-desktop-text.prerm  postinst  prerm  rules
po/: POTFILES.in  be.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  lt.po  ms.po  nl.po  pa.po  pl.po  plymouth-theme-cvm-ui-desktop.pot  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: meson.build
src/cvm-ui-desktop-bgrt/: cvm-ui-desktop-bgrt.plymouth  cvm-ui-desktop-bgrt.plymouth.desktop  meson.build
src/cvm-ui-desktop-logo/: cvm-ui-desktop-logo-scale-2.plymouth.in  cvm-ui-desktop-logo.plymouth.in  meson.build
src/cvm-ui-desktop-logo/logo_assets/: cvm-ui-desktop-logo-scale-2.script  cvm-ui-desktop-logo.grub  cvm-ui-desktop-logo.script
src/cvm-ui-desktop-text/: cvm-ui-desktop-text.plymouth  meson.build
