option('cvm-ui-desktop-bgrt', type: 'boolean', value: true, description:'build cvm-ui-desktop-bgrt plymouth-theme (default)')
option('cvm-ui-desktop-logo', type: 'boolean', value: false, description:'build cvm-ui-desktop-logo plymouth-theme')
option('cvm-ui-desktop-text', type: 'boolean', value: false, description:'build cvm-ui-desktop-text plymouth-theme')
